# simple-agent-tester

./: .gitignore  README.md  config.yaml  pyproject.toml
src/simple_agent_tester/: cli.py  core.py
src/simple_agent_tester/templates/: agent.yaml
